added main products and best experties section

--- a/index.html
+++ b/index.html
@@ -288,7 +288,94 @@
 
     </div>
     <!-- about section end here -->
+     
+    <!-- products section start here -->
 
+    <div class="py-8">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="text-center mb-10">
+                <h2 class="text-lg font-semibold uppercase tracking-wide text-[#bf9b7c]">Main Product Item</h2>
+                <h1 class="text-3xl font-bold text-gray-900 mt-2 carousel-text">Well Done Sourcing</h1>
+            </div>
+            <div class="grid grid-cols-6 gap-6 mb-16">
+                <!-- Product items -->
+                <div class="product-card bg-white shadow rounded overflow-hidden">
+                  <a href="#">  <img src="image/knit.jpg" alt="Knit clothing item placeholder image" class="w-full h-48 object-cover"></a>
+                    <div class="p-4">
+                        <h3 class="text-center text-gray-700">Knit</h3>
+                    </div>
+                </div>
+                <div class="product-card bg-white shadow rounded overflow-hidden">
+                    <a href="#"><img src="image/woven.jpg" alt="Woven clothing item placeholder image" class="w-full h-48 object-cover"></a>
+                    <div class="p-4">
+                        <h3 class="text-center text-gray-700">Woven</h3>
+                    </div>
+                </div>
+                <div class="product-card bg-white shadow rounded overflow-hidden">
+                   <a href="#"> <img src="image/sweater.jpg" alt="Sweater clothing item placeholder image" class="w-full h-48 object-cover"></a>
+                    <div class="p-4">
+                        <h3 class="text-center text-gray-700">Sweater</h3>
+                    </div>
+                </div>
+                <div class="product-card bg-white shadow rounded overflow-hidden">
+                    <a href="#"><img src="image/cap.jpg" alt="Heat wear cap item placeholder image" class="w-full h-48 object-cover"></a>
+                    <div class="p-4">
+                        <h3 class="text-center text-gray-700">Heat Wear (Cap)</h3>
+                    </div>
+                </div>
+                <div class="product-card bg-white shadow rounded overflow-hidden">
+                    <a href="#"><img src="image/others.jpg" alt="Other clothing items placeholder image" class="w-full h-48 object-cover"></a>
+                    <div class="p-4">
+                        <h3 class="text-center text-gray-700">Others</h3>
+                    </div>
+                </div>
+                <div class="product-card bg-white shadow rounded overflow-hidden">
+                    <a href="#"><img src="image/denim.jpg" alt="Denim top bottom clothing item placeholder image"
+                        class="w-full h-48 object-cover"></a>
+                    <div class="p-4">
+                        <h3 class="text-center text-gray-700">Denim Top Bottom</h3>
+                    </div>
+                </div>
+            </div>
+
+             <!-- products section end here -->
+
+
+             <!-- Our Best Experties start here -->
+            <div class="expertise-bg text-center py-10 ">
+                <h2 class="text-3xl font-bold text-white">Our Best Experties</h2>
+            </div>
+            <div class="flex justify-center space-x-4 bg-[#051744] py-10">
+                <div class="flex items-center space-x-2 bg-[#051744]">
+                    <div class="p-4 bg-blue-900 rounded-full">
+                        <i class="fa-2x fas fa-shipping-fast text-white"></i>
+                    </div>
+                    <div class="p-4 rounded-lg">
+                        <h3 class="text-lg font-semibold text-white">Timely Shipping</h3>
+                        <p class="text-white">We Are Timely Shipping to door</p>
+                    </div>
+                </div>
+                <div class="flex items-center space-x-2">
+                    <div class="p-4 bg-blue-900 rounded-full">
+                        <i class="fa-2x fas fa-smile text-white"></i>
+                    </div>
+                    <div class="p-4 rounded-lg">
+                        <h3 class="text-lg font-semibold text-white">Clients Satisfaction</h3>
+                        <p class="text-white">We ensure clients satisfaction</p>
+                    </div>
+                </div>
+                <div class="flex items-center space-x-2">
+                    <div class="p-4 bg-blue-900 rounded-full">
+                        <i class="fa-2x fas fa-lightbulb text-white"></i>
+                    </div>
+                    <div class="p-4 rounded-lg">
+                        <h3 class="text-lg font-semibold text-white">Creative Product</h3>
+                        <p class="text-white">We always make creative product.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     <!-- Our Best Experties start here -->
 
 
 
