All Product section done

--- a/index.html
+++ b/index.html
@@ -377,7 +377,60 @@
         </div>
      <!-- Our Best Experties start here -->
 
+     <!-- All Product section start here -->
 
+
+        <div class="my-10">
+            <div class="max-w-7xl mx-auto px-4 bg-[#f7f4f4]">
+                <h2 class="text-lg font-semibold uppercase tracking-wide text-[#bf9b7c] text-center">OUR ALL Products
+                </h2>
+                <h2 class="text-2xl font-semibold text-gray-800 text-center mb-6">Well Done Sourcing Creation Products.</h2>
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-12 ">
+                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
+                        <a href="#"><img src="image/men1.png" alt="Women's beige cardigan with red floral embroidery" class="mb-3"></a>
+                        <span class="text-gray-700 font-semibold">Men 004</span>
+                    </div>
+                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
+                        <a href="#"><img src="image/women.jpg" alt="Kids' navy blue jacket with patch" class="mb-3"></a>
+                        <span class="text-gray-700 font-semibold">women 001</span>
+                    </div>
+                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
+                        <a href="#"><img src="image/kids.jpg" alt="Kids' black sweater" class="mb-3"></a>
+                        <span class="text-gray-700 font-semibold">Kids 002</span>
+                    </div>
+                    <div class="product-card bg-white shadow-lg rounded-lg p-4 flex flex-col items-center text-center">
+                        <a href="#"><img src="image/men2.jpg" alt="Kids' grey and black striped sweater" class="mb-3"></a>
+                        <span class="text-gray-700 font-semibold">Kids 003</span>
+                    </div>
+                </div>
+                <div
+                    class="valued-client-section rounded-lg shadow-lg mb-12 p-6 flex items-center justify-center flex-col text-center">
+                    <div class="bg-opacity-75 p-4 rounded-lg">
+                        <h3 class="text-lg font-semibold text-white mb-2">Our Valued Client</h3>
+                        <p class="text-white">Thank you for being our valued customers. We are grateful for the pleasure
+                            of serving you and meeting your clothing needs.</p>
+                    </div>
+                </div>
+        
+                <body class="bg-white">
+                    <div class="bg-white text-white p-8">
+                        <div class="flex flex-col md:flex-row justify-between items-center">
+                            <div class="text-3xl font-bold text-[#051744]">
+                                LATEST NEWS & UPDATES
+                            </div>
+                            <div class="flex space-x-4 mt-4 md:mt-0">
+                                <a href="#"><img src="image/latest-updatw.jpg"
+                                    alt="A variety of stylish clothing items neatly organized on hangers, showcasing a range of colors and designs."
+                                    class="w-48 h-32"></a>
+                                <a href="#"><img src="image/latest2.jpg"
+                                    alt="A close-up of a selection of shirts and jackets, highlighting the textures and fabrics."
+                                    class="w-48 h-32"></a>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+
+         <!-- All Product section end here -->
 
 
 
