--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="header-content ">
                 <div class="header-logo">
-                    <a href="#"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg""></a>
+                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg""></a>
                   
                 </div>
                 <div class=" sourcing-text font-bold text-[#051744] text-lg">
@@ -50,8 +50,8 @@
 
         <!-- navbar start here -->
 
-        <nav class="bg-[#051744]">
-            <div class="max-w-7xl mx-auto px-4">
+        <nav class="bg-[#051744] ">
+            <div class="max-w-7xl mx-auto px-4 ">
                 <div class="flex justify-between h-16">
                     <div class="flex space-x-4">
                         <!-- Mobile menu button -->
@@ -65,7 +65,7 @@
                             <button id="closeButton" class="text-white focus:outline-none mb-4">
                                 <i class="fas fa-times"></i>
                             </button>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Home</a>
+                            <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">Home</a>
                             <div class="dropdown">
                                 <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
@@ -122,7 +122,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
+                            <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
