added services page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welldone Soucing</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+      <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- font awesome cdn -->
@@ -20,7 +20,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="header-content ">
                 <div class="header-logo">
-                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg""></a>
+                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg"></a>
                   
                 </div>
                 <div class=" sourcing-text font-bold text-[#051744] text-lg">
@@ -50,7 +50,7 @@
 
         <!-- navbar start here -->
 
-        <nav class="bg-[#051744] ">
+        <nav class="bg-[#051744]">
             <div class="max-w-7xl mx-auto px-4 ">
                 <div class="flex justify-between h-16">
                     <div class="flex space-x-4">
