--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
             <div class="header-content ">
                 <div class="header-logo">
-                    <a href="#"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg""></a>
+                    <a href="index.html"> <img class=" rounded-full ring ring-[#051744]" src="image/logo.jpg""></a>
                   
                 </div>
                 <div class=" sourcing-text font-bold text-[#051744] text-lg">
@@ -124,14 +124,14 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
+                            <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
+                            <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
                         <div class="hidden md:flex items-center space-x-1">
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
+                            <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
                             <div class="dropdown relative">
                                 <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
@@ -189,7 +189,7 @@
                                 </div>
                             </div>
                             <a href="faq.html" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
+                            <a href="services.html" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
                             <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
                             <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
                         </div>
