--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
+                            <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
                             <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
@@ -186,8 +186,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
+                            <a href="faq.html" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
+                            <a href="services.html" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
                             <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
                             <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
                         </div>
