contact page added

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
                         <div class="hidden md:flex items-center space-x-1">
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
+                            <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
                             <div class="dropdown relative">
                                 <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
@@ -188,8 +188,8 @@
                             </div>
                             <a href="faq.html" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
                         </div>
                     </div>
                 </div>
