--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                             </button>
                             <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">Home</a>
                             <div class="dropdown">
-                                <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
-                                    <a href="#">Our Profile</a>
+                                    <a href="profile.html">Our Profile</a>
                                     <a href="#">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
@@ -131,9 +131,9 @@
                         <div class="hidden md:flex items-center space-x-1">
                             <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
                             <div class="dropdown relative">
-                                <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
-                                    <a href="#">Our Profile</a>
+                                    <a href="profile.html">Our Profile</a>
                                     <a href="#">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
