--- a/services.html
+++ b/services.html
@@ -69,9 +69,9 @@
                             </button>
                             <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">Home</a>
                             <div class="dropdown">
-                                <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
-                                    <a href="#">Our Profile</a>
+                                    <a href="profile.html">Our Profile</a>
                                     <a href="#">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
@@ -126,16 +126,16 @@
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
                         <div class="hidden md:flex items-center space-x-1">
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
+                            <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">Home</a>
                             <div class="dropdown relative">
-                                <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
+                                <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
-                                    <a href="#">Our Profile</a>
+                                    <a href="profile.html">Our Profile</a>
                                     <a href="#">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
@@ -189,9 +189,9 @@
                                 </div>
                             </div>
                             <a href="faq.html" class="text-white py-2 px-3 hover:bg-blue-700">FAQ</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
+                            <a href="services.html" class="text-white py-2 px-3 hover:bg-blue-700">Services</a>
+                            <a href="news-events.html" class="text-white py-2 px-3 hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="text-white py-2 px-3 hover:bg-blue-700">Contact Us</a>
                         </div>
                     </div>
                 </div>
