--- a/faq.html
+++ b/faq.html
@@ -72,7 +72,7 @@
                                 <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
                                     <a href="profile.html">Our Profile</a>
-                                    <a href="#">Our Goal</a>
+                                    <a href="goal.html">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
@@ -126,8 +126,8 @@
                             </div>
                             <a href="faq.html" class="block py-2 px-3 text-white hover:bg-blue-700">FAQ</a>
                             <a href="services.html" class="block py-2 px-3 text-white hover:bg-blue-700">Services</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
-                            <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
+                            <a href="news-events.html" class="block py-2 px-3 text-white hover:bg-blue-700">News & Events</a>
+                            <a href="contact.html" class="block py-2 px-3 text-white hover:bg-blue-700">Contact Us</a>
                         </div>
                         <!-- Primary Navigation Menu -->
                         <div class="hidden md:flex items-center space-x-1">
@@ -136,7 +136,7 @@
                                 <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
                                     <a href="profile.html">Our Profile</a>
-                                    <a href="#">Our Goal</a>
+                                    <a href="goal.html">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
