--- a/goal.html
+++ b/goal.html
@@ -205,40 +205,43 @@
     <!-- header end here -->
 
 
-    <!--contact start here -->
+    <!-- goal start here -->
 
-    <section class="bg-gray-100">
-        <div class="container mx-auto px-6 py-10">
-            <h1 class="text-3xl font-semibold text-gray-800 mb-8 text-center">Contact Us</h1>
-
-            <div class="flex flex-wrap justify-between ">
-                <div class="bg-white p-12 shadow-lg rounded-lg max-w-sm ">
-                    <h2 class="text-xl font-semibold text-gray-800 mb-4">Office Address</h2>
-                    <p class="text-gray-600 mb-4">
-                        <i class="fas fa-map-marker-alt text-red-500 mr-2"></i>
-                        Azure Textiles Limited<br>
-                        House # 12, Road # 34,<br>
-                        Sector # 07, Crystal City,<br>
-                        Dhaka - 1230, Bangladesh
-                    </p>
-                    <p class="text-gray-600 mb-4">
-                        <i class="fas fa-envelope text-blue-500 mr-2"></i>
-                        info@azuretextiles.com
-                    </p>
-                    <p class="text-gray-600">
-                        <i class="fas fa-phone-alt text-green-500 mr-2"></i>
-                        +880 1234 567 890,<br>
-                        +880 9876 543 210
-                    </p>
+    <div class="bg-white py-8">
+        <div class="max-w-7xl mx-auto px-4">
+            <h1 class="text-3xl font-bold text-center mb-8">OUR GOALS</h1>
+            <div class="flex flex-wrap md:flex-nowrap">
+                <div class="md:flex-1">
+                    <img src="image/goals.webp"
+                        alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
                 </div>
-                <div class="max-w-sm">
-                    <img class="rounded-lg shadow-lg " src="image/contact.png"
-                        alt="Customer service representative with a headset smiling and assisting clients.">
+                <div class="md:flex-1 md:pl-8">
+                    <h3 class="text-gray-700 mb-4 font-bold">Our Customer </h3>
+                    <p class="text-gray-700 mb-4"> We put our customers at the forefront recognizing & respecting their
+                        values , with a view to always meet their requirements and making their sourcing, a valuable
+                        one.</p>
+                    <h3 class="text-gray-700 mb-4 font-bold">Workforce</h3>
+                    <p class="text-gray-700 mb-4">We commit ourselves to make sure that our people grow within the
+                        business.
+                        We believe in their reliability, team spirit and legitimate aspirations for always being
+                        successful.</p>
+                    <h3 class="text-gray-700 mb-4 font-bold">Leadership</h3>
+                    <p class="text-gray-700 mb-4">We demonstrate decisive leadership and fast management reaction to
+                        secure maximum advantages of changes</p>
                 </div>
             </div>
+            <h3 class="text-gray-700 mb-4 font-bold">Accountability</h3>
+            <p class="text-gray-700 mt-4">We recognize and always honor the investment of our customers, as well as our
+                ethical and social responsibilities. We respect our environment and its protection is part of our prime
+                duties.</p>
+            <h3 class="text-gray-700 mb-4 font-bold">Excellence
+            </h3>
+            <p class="text-gray-700 mt-4">We compete on quality, service and value. We build our competitive edge on
+                superior innovation and customer responsiveness.
+                We have a passion for excellence and our intention is to simply be the best.</p>
         </div>
-    </section>
-    <!-- contact end here -->
+    </div>
+    <!-- gaol end here -->
 
 
 
