--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
                                 <a href="index.html" class="block py-2 px-3 text-white hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu">
                                     <a href="profile.html">Our Profile</a>
-                                    <a href="#">Our Goal</a>
+                                    <a href="goal.html">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
@@ -136,7 +136,7 @@
                                 <a href="index.html" class="text-white py-2 px-3 hover:bg-blue-700">About Us</a>
                                 <div class="dropdown-menu absolute hidden">
                                     <a href="profile.html">Our Profile</a>
-                                    <a href="#">Our Goal</a>
+                                    <a href="goal.html">Our Goal</a>
                                     <a href="#">How We Work</a>
                                     <a href="#">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
