we work done and mission vision page added

--- a/how-we-work.html
+++ b/how-we-work.html
@@ -205,40 +205,62 @@
     <!-- header end here -->
 
 
-    <!--contact start here -->
+    <!-- goal start here -->
 
-    <section class="bg-gray-100">
-        <div class="container mx-auto px-6 py-10">
-            <h1 class="text-3xl font-semibold text-gray-800 mb-8 text-center">Contact Us</h1>
-
-            <div class="flex flex-wrap justify-between ">
-                <div class="bg-white p-12 shadow-lg rounded-lg max-w-sm ">
-                    <h2 class="text-xl font-semibold text-gray-800 mb-4">Office Address</h2>
-                    <p class="text-gray-600 mb-4">
-                        <i class="fas fa-map-marker-alt text-red-500 mr-2"></i>
-                        Azure Textiles Limited<br>
-                        House # 12, Road # 34,<br>
-                        Sector # 07, Crystal City,<br>
-                        Dhaka - 1230, Bangladesh
-                    </p>
-                    <p class="text-gray-600 mb-4">
-                        <i class="fas fa-envelope text-blue-500 mr-2"></i>
-                        info@azuretextiles.com
-                    </p>
-                    <p class="text-gray-600">
-                        <i class="fas fa-phone-alt text-green-500 mr-2"></i>
-                        +880 1234 567 890,<br>
-                        +880 9876 543 210
-                    </p>
+    <div class="bg-white py-8">
+        <div class="max-w-7xl mx-auto px-4">
+            <h1 class="text-3xl font-bold text-center mb-8">HOW WE WORK</h1>
+            <div class="flex flex-wrap md:flex-nowrap">
+                <div class="md:flex-1">
+                    <img src="image/how-we-work.jpg"
+                        alt="Two professionals discussing work at a table with documents and a laptop" class="mb-4">
                 </div>
-                <div class="max-w-sm">
-                    <img class="rounded-lg shadow-lg " src="image/contact.png"
-                        alt="Customer service representative with a headset smiling and assisting clients.">
+                <div class="md:flex-1 md:pl-8">
+                    <h3 class="text-gray-700 mb-4 font-bold">How We Work (Work Style) </h3>
+                    <h3 class="text-gray-700 mb-4 font-bold">Reliability means “No last minute surprise”
+                    </h3>
+                    <p class="text-gray-700 mb-4"> <span class="font-bold">Well Done Sourcing</span> believe in
+                        exploring, understanding, adapting & implementing the best in our business to drive the growth &
+                        success of our company as well as meeting the customer need. The team working with us is
+                        enthusiastic & has always exceeded the expectations set by the company. Here are the key points
+                        of our style of working:</p>
+                    <ul>
+                        <li>We understand the nature of fashion business & capture product information with respect to
+                            its construction, fabric, trims, packing & folding methods in written format known as Tech
+                            pack.</li>
+                        <br>
+                        <li>Conduct “product production feasibility” to finalize the vendor base for its production.
+                        </li>
+                    </ul>
                 </div>
             </div>
+            <h3 class="text-gray-700 mb-4 font-bold">To our clients who let us keep on moving</h3>
+            <ul>
+                <li>We ensure right price, right quality and on time delivery.
+                </li>
+                <br>
+                <li>We believe in building long term valued business partnership.
+                </li>
+            </ul>
+            <h3 class="text-gray-700 mb-4 font-bold">To those who work with us-</h3>
+            <ul>
+                <li>We recruit and retain right people in right position.
+                </li>
+                <br>
+                <li>They must be educated, experienced, capable and ethical.
+                </li> <br>
+                <li>We treat them with dignity and fairness.
+                </li>
+            </ul>
+            <br>
+            <p class="text-gray-700 mb-4"> Well Done Sourcing</span> believe in
+                exploring, understanding, adapting & implementing the best in our business to drive the growth &
+                success of our company as well as meeting the customer need. The team working with us is
+                enthusiastic & has always exceeded the expectations set by the company. Here are the key points
+                of our style of working:</p>
         </div>
-    </section>
-    <!-- contact end here -->
+    </div>
+    <!-- gaol end here -->
 
 
 
