--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,7 @@
                                 <div class="dropdown-menu">
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
-                                    <a href="#">How We Work</a>
+                                    <a href="how-we-work.html">How We Work</a>
                                     <a href="#">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
@@ -138,7 +138,7 @@
                                 <div class="dropdown-menu absolute hidden">
                                     <a href="profile.html">Our Profile</a>
                                     <a href="goal.html">Our Goal</a>
-                                    <a href="#">How We Work</a>
+                                    <a href="how-we-work.html">How We Work</a>
                                     <a href="#">Mission & Vision</a>
                                     <a href="#">Zero Tolerance Policy</a>
                                 </div>
